--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="Texchange organizes textbooks required for courses offered at the University of Victoria (UVic).
+  <meta name="description" content="Texchange organizes textbooks required for courses offered in University courses.
   It allows users to search for desired textbooks and contact their fellow peers to trade.">
   <meta name="author" content="Joe Czepil">
   <meta name="format-detection" content="telephone=no" />
@@ -39,9 +39,9 @@
   function changeColor() {
     var colors = [['rgb(255, 96, 115)', 'rgb(234, 56, 77)'],
     ['rgb(139, 223, 181)', 'rgb(145, 222, 145)'],
+    ['rgb(127, 139, 144)', 'rgb(78, 83, 96)'],
     ['#4EA9F6' , '#3583D0'],
-    ['rgb(255, 162, 102)', 'rgb(234, 107, 107)'],
-    ['rgb(127, 139, 144)', 'rgb(78, 83, 96)']];
+    ['rgb(255, 162, 102)', 'rgb(234, 107, 107)']];
 
     if(globalCount === 4) {
       globalCount = 0;
@@ -58,7 +58,7 @@
   <!-- Info displayed when site it shared/linked -->
   <meta property="og:url"           content="http://www.texchange.ca" />
   <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="UVic Texchange" />
-  <meta property="og:description"   content="Making textbook exchange at UVic easy!" />
+  <meta property="og:title"         content="Texchange" />
+  <meta property="og:description"   content="Making exchanging textbooks at university easy!" />
   <meta property="og:image"         content="{% static '/textchange/share-orange.png' %}" />
 </head>
