--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -37,12 +37,12 @@ window.onclick = function(event) {
         <div class="dropdown">
           <span onclick="myFunction()" class="dropbtn">Hi, {{request.user.first_name}}!</span>
           <div id="myDropdown" class="dropdown-content">
-              <a class="btn btn-lg btn-success option" href="{% url 'textchange:addposting' %}" role="button">Sell a Book</a>
-              <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Manage Postings</a>
-              <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact</a>
-              <a class="btn btn-lg btn-success option" href="{% url 'textchange:help' %}" role="button">Help</a>
-              <a class="btn btn-lg btn-success option" href="https://www.facebook.com/TexchangeApp" class="bottomdropdown" role="button">Like us on Facebook!</a>
-              <a href="{% url 'textchange:navbar' %}" class="logout">Logout</a>
+              <a href="{% url 'textchange:addposting' %}">Sell a Book</a>
+              <a href="{% url 'textchange:wishlisting' %}">Manage Postings</a>
+              <a href="{% url 'textchange:about' %}">Contact</a>
+              <a href="{% url 'textchange:help' %}" >Help</a>
+              <a target="_blank" href="https://www.facebook.com/TexchangeApp">Like us on Facebook!</a>
+              <a href="{% url 'textchange:navbar' %}" class="bottomdropdown">Logout</a>
           </div>
         </div>
       </div>
