--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -10,7 +10,7 @@
       <p>If you wish to give feedback on the application or if there is a feature you would like to request, use the form below.
       If you would like to contact the developer or designer check out their contact information below the form.</p>
       {% if message %}
-        Thanks for the feedback :) The two knobs down below appreciate it
+        Thanks for the feedback :)
       {% else %}
       <div class="feedback" style="margin-left: auto; margin-right: auto; display: block;">
       <form method="post">
