--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -32,6 +32,7 @@
     console.log(oldcolor)
     console.log(oldcolor2)
     if(oldcolor) {
+      document.getElementById("landing_page").style.animation
       document.getElementById("landing_page").style.background = 'linear-gradient(180deg,' + oldcolor + ', ' +  oldcolor2 + ')';
     }
   }
