--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -19,7 +19,7 @@
       </p>
       <p id="Search" class="header2">Searching</p>
       <p class="basic-text">In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
-        class name, class number, textbook name, textbook isbn, textbook author, or any combination of the options listed. Entering multiple words into the search field will refine your search to match
+        class name, class number, textbook name, textbook ISBN, textbook author, or any combination of the options listed. Entering multiple words into the search field will refine your search to match
         both inputs. After searching you will be presented with a list of posted textbooks. Click on one of those items to contact the seller.</p>
       <p id="PostWish" class="header2">Creating Postings</p>
       <p class="basic-text">In order to create a posting simple click on the "Sell" link in the center of the main page. Enter the ISBN of the book you wish to sell with <noscript>
