--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -51,6 +51,9 @@ a:hover {
   --transition: 0.2s;
 
 }
+.inline {
+  display: inline;
+}
 .branding {
   font-size: var(--branding);
   font-family: 'SourceSansPro-SemiBold';
@@ -160,9 +163,14 @@ a:hover {
   padding-bottom: 4px;
   color: red;
 }
+.results_container.standard_container {
+  min-height: 0;
+}
 .results_table div {
   display: inline-block;
   background-color: white;
+  height: 32px;
+  box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
 }
 .results_table a {
   float: inherit;
@@ -350,6 +358,7 @@ a:hover {
 .contactdescription {
   padding-left: 90px;
   padding-top: 0px;
+  min-width: 205px;
 }
 .contactdescription p {
   padding-top: 2px;
