sell a book button

--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -7,9 +7,8 @@
   It allows users to search for desired textbooks and contact their fellow peers to trade.">
   <meta name="author" content="Joe Czepil">
   <meta name="format-detection" content="telephone=no" />
-  <link rel="icon" href="../../favicon.ico">
 
-  <title>Texchange - Exchange Textbooks at University of Victoria (UVic)</title>
+  <title>Texchange - Exchange Textbooks at Universities across British Columbia</title>
 
   {% load staticfiles %}
 
@@ -20,7 +19,7 @@
   <link href="{% static "textchange/phonecss.css" %}" media="screen and (max-width: 460px)" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-  <link rel="shortcut icon" href="{% static "textchange/tabicon.png" %}">
+  <link rel="shortcut icon" href="{% static "textchange/texchange.ico" %}">
 
   <script>
   var globalCount = 0;
