Primary index page title and button

--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -21,7 +21,7 @@
       {% if curuser.is_authenticated %}
       <div class="booktosell"><a href="{% url 'textchange:addposting' %}"><p>Have a textbook that you want to Sell?</p></a></div>
       {% else %}
-      <div class="booktosell booktosellnope"><a href="#"><p>Looking to sell a textbook?</p></a></div>
+      <div class="booktosell booktosellnope"><a href="#"><p>Have a textbook to sell?</p></a></div>
       {% endif %}
     </div>
       </br>
