Update booktosell text

--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -19,7 +19,7 @@
   </div>
       </form>
       {% if curuser.is_authenticated %}
-      <div class="booktosell"><a href="{% url 'textchange:addposting' %}"><p>Have a textbook that you want to Sell?</p></a></div>
+      <div class="booktosell"><a href="{% url 'textchange:addposting' %}"><p>Have a textbook to sell?</p></a></div>
       {% else %}
       <div class="booktosell booktosellnope"><a href="#"><p>Have a textbook to sell?</p></a></div>
       {% endif %}
