--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -33,6 +33,8 @@
     if(oldcolor) {
       document.getElementById("landing_page").style.animation
       document.getElementById("landing_page").style.background = 'linear-gradient(180deg,' + oldcolor + ', ' +  oldcolor2 + ')';
+    } else {
+      document.getElementById("landing_page").style.background = 'linear-gradient(180deg, rgb(255, 162, 102), rgb(234, 107, 107))';
     }
   }
 
