--- a/textchange/static/textchange/browser.css
+++ b/textchange/static/textchange/browser.css
@@ -8,6 +8,7 @@
 .content_container.login_content_container {
   top: 90px;
   height: calc(100vh - 150px);
+  width: calc(100vh - 150px);
   min-height: 400px;
   border-radius: 4px;
 }
@@ -30,7 +31,6 @@
 .login_container {
   height: 340px;
   position: relative;
-  width: 60vw;
   max-width: 500px;
   padding: 0px 35px 0px 35px;
 }
