--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -539,6 +539,12 @@ a:hover {
   text-align: center;
 }
 
+.booktosellnope p {
+  font-size: 18px;
+  color: white;
+  position: relative;
+  top: 15px;
+}
 .booktosell {
   font-size: 18px;
   color: #fff;
@@ -551,7 +557,6 @@ a:hover {
   top: 15px;
 }
 .booktosell a {
-  /*font-family: 'SourceSansPro-SemiBold';*/
   text-decoration: none;
   color: #fff;
 }
