--- a/textchange/templates/textchange/login.html
+++ b/textchange/templates/textchange/login.html
@@ -9,7 +9,8 @@
       <div class="login_container">
         <p class="branding">texchange</p>
         <a class="close_login" href="{% url 'textchange:index' %}"></a>
-        <p class="login_sorry">We don't like this part either but, this is to connect you with other great people on texchange.</p>
+        <p class="login_sorry">We don't like this part either but, this is to connect you with other great people on texchange.
+        In order to add textbooks or contact other users you must be logged in.</p>
         <span><a class="facebook_login" href="{% url 'social:begin' 'facebook' %}?next=/"><span class="primary_facebook">Continue with Facebook.</span></a>
       </span><span><a class="google_login" href="{% url 'social:begin' 'google-oauth2' %}?next=/"><span>Continue with Google.</span></a>
     </span><div class="login_shit"></div>
