--- a/textchange/static/textchange/browser.css
+++ b/textchange/static/textchange/browser.css
@@ -8,7 +8,6 @@
 .content_container.login_content_container {
   top: 90px;
   height: calc(100vh - 150px);
-  width: calc(100vh - 150px);
   min-height: 400px;
   border-radius: 4px;
 }
@@ -32,6 +31,7 @@
   height: 340px;
   position: relative;
   max-width: 500px;
+  width: 60vw;
   padding: 0px 35px 0px 35px;
 }
 .login_sorry {
