--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -22,7 +22,7 @@
                 <div class="add_posting_fields">
                   {{ field }}
                   {% if field.name = 'ISBN' and notexisting %}
-                   <span class="yafuckedup">That textbook does not exist at this school.</span>
+                   <span class="yamessedup">That textbook does not exist at this school.</span>
                   {% endif %}
                   <span style="color: red;">{{ field.errors }}</span>
                 </div>
