--- a/textchange/templates/textchange/base.html
+++ b/textchange/templates/textchange/base.html
@@ -5,7 +5,7 @@
   {% if homepage %}
   <body onload="getColor()" id="landing_page">
     {% else %}
-  <body>
+  <body id="all_bodys">
   {% endif %}
 
     {% include "textchange/navbar.html" %}
