--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -50,6 +50,9 @@ a:hover {
   --transition: 0.2s;
 
 }
+#all_bodys {
+  background-color: #FBFBFB;
+}
 .inline {
   display: inline;
 }
@@ -143,7 +146,7 @@ a:hover {
   color: red;
   font-size: 12px;
 }
-.yafuckedup {
+.yamessedup {
   color: red;
   font-size: 12px;
   margin-left: -21px;
@@ -169,11 +172,16 @@ a:hover {
 .results_container.standard_container {
   min-height: 0;
 }
+.results_table {
+  overflow: hidden;
+  box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
+  border-radius: 6px;
+  margin-bottom: 15px;
+}
 .results_table div {
   display: inline-block;
   background-color: white;
   height: 32px;
-  box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
 }
 .results_table a {
   float: inherit;
@@ -380,7 +388,7 @@ a:hover {
   text-decoration: none;
 }
 
-.login_container .login_shit {
+.login_container .login_smile {
   width: 30px;
   height: 30px;
   display: block;
@@ -727,8 +735,6 @@ a:hover {
   border: none;
   text-indent: -100px;
 }
-
-
 
 /* ############ DROPDOWN ################## */
 
