--- a/textchange/static/textchange/phonecss.css
+++ b/textchange/static/textchange/phonecss.css
@@ -213,5 +213,8 @@
   width: 205px;
   margin: auto;
   margin-bottom: 15px;
+}
+
+.codecruncher img, .pixelninja img {
   box-shadow: 0 2px 3px 0 rgba(166, 166, 166, .20);
 }
