--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -31,7 +31,7 @@
           <div class="add_posting_button_container">
             <div class="add_posting_submit">
             <a class="cancel_button" href="{% url 'textchange:index' %}">Cancel</a>
-            <input type="submit" value="Submit" class="add_posting_button button"></input>
+            <button type="submit" value="Submit" class="add_posting_button button">Submit</button>
           </div>
           </div>
         </form>
