--- a/textchange/static/textchange/browser.css
+++ b/textchange/static/textchange/browser.css
@@ -81,10 +81,6 @@
 .index-search-form-wrapper {
   box-shadow: 0px 1px 10px 0px rgba(166, 166, 166, 0.30);
 }
-.school_form_wrapper {
-  display: inline-block;
-  margin-left: -7px;
-}
 .index-search-form .input_form {
   border: none;
   border-radius: 4px 4px 4px 4px;
@@ -99,27 +95,28 @@
   z-index: 10;
 }
 .index-search-form .input_form_school {
-  border-radius: 0 0 0 0;
   background-color: #ffffff;
   height: 42px;
+  margin-left: -5px;
   width: 35vw;
   max-width: 240px;
   min-width: 170px;
   color: #7D7D7D;
   padding-left: 14px;
   -webkit-appearance: none;
-  -webkit-border-radius: 0;
+  -webkit-border-radius: 0 4px 4px 0;
   font-size: 16px;
   border-top: none;
   border-bottom: none;
+  border-right: 0px;
   border-left: 1px solid #DBDBDB;
 }
 .index-search-form #search {
   border: none;
   border-radius: 0px 4px 4px 0;
   background-color: #ffffff;
-  margin-left: -5px;
-  height: 42px;
+  margin-left: -46px;
+  height: 41px;
   width: 42px;
   display: inline-block;
   border-left: 1px solid #DBDBDB;
@@ -130,7 +127,7 @@
   background-repeat: no-repeat;
   background-position: 10px 10px;
   cursor: pointer;
-  text-indent: -100px;
+  text-indent: 36px;
 }
 
 .results_outer_content.content_container {
@@ -233,6 +230,6 @@
   height: 80px;
 }
 
-.codecruncher img, .pixelninja img {
+.contactpic {
   box-shadow: 0 2px 3px 0 rgba(166, 166, 166, .20);
 }
